feat(stock): 添加股票默认排序字段
- 在 StockDataBean 中添加 index 字段用于排序
- 修改 StockWindow 中的数据显示逻辑，按 index 降序排列
- 更新配置文件名为 DefaultStockConfig.json
- 调整表格列的顺序和显示方式

--- a/src/main/resources/config/DefaultStockConfig.json
+++ b/src/main/resources/config/DefaultStockConfig.json
@@ -2,12 +2,14 @@
   {
     "code": "sz300059",
     "maskName": "dc",
-    "alias": "富"
+    "alias": "富",
+    "index": 10
   },
   {
     "code": "sh513090",
     "maskName": "xgzq",
-    "alias": "港"
+    "alias": "港",
+    "index": 15
   },
   {
     "code": "sz002195",
