feat(stock): 添加股票固定功能
- 在 StockDataBean 和 StockConfig 中添加 pinTop 字段，用于表示股票是否固定在顶部
- 修改 StockTableModel 中的排序逻辑，优先显示固定在顶部的股票
- 在 StockWindow 中添加固定股票的功能，并更新相关UI
- 更新 README.md 中的待办事项列表

--- a/src/main/resources/config/DefaultStockConfig.json
+++ b/src/main/resources/config/DefaultStockConfig.json
@@ -3,17 +3,20 @@
     "code": "sz300059",
     "maskName": "dc",
     "alias": "富",
-    "index": 10
+    "index": 10,
+    "pinTop": true
   },
   {
     "code": "sh513090",
     "maskName": "xgzq",
     "alias": "港",
-    "index": 15
+    "index": 20,
+    "pinTop": true
   },
   {
     "code": "sz002195",
-    "alias": "岩"
+    "alias": "岩",
+    "index": 15
   },
   {
     "code": "sh601360",
