--- a/src/main/resources/config/DefaultStockConfig.json
+++ b/src/main/resources/config/DefaultStockConfig.json
@@ -3,20 +3,17 @@
     "code": "sz300059",
     "maskName": "dc",
     "alias": "富",
-    "index": 10,
     "pinTop": true
   },
   {
     "code": "sh513090",
     "maskName": "xgzq",
     "alias": "港",
-    "index": 20,
     "pinTop": true
   },
   {
     "code": "sz002195",
-    "alias": "岩",
-    "index": 15
+    "alias": "岩"
   },
   {
     "code": "sh601360",
