refactor(config): 重构表格列配置管理
- 新增 TableColumnConfig 类用于配置表格列
- 更新 GlobalConfig 和 GlobalConfigManager 以使用新的列配置
- 修改 StockConfig 移除未使用的 index 字段
- 更新 DefaultStockConfig.json 添加 maskName 字段

--- a/src/main/resources/config/DefaultStockConfig.json
+++ b/src/main/resources/config/DefaultStockConfig.json
@@ -1,7 +1,7 @@
 [
   {
     "code": "sz300059",
-    "maskName": "dc",
+    "maskName": "dongcai",
     "alias": "富",
     "pinTop": true
   },
@@ -13,30 +13,37 @@
   },
   {
     "code": "sz002195",
-    "alias": "岩"
+    "alias": "岩",
+    "maskName": "yskj"
   },
   {
     "code": "sh601360",
-    "alias": "360"
+    "alias": "360",
+    "maskName": "360"
   },
   {
     "code": "sh600031",
-    "alias": "31"
+    "alias": "31",
+    "maskName": "31"
   },
   {
     "code": "sh600900",
-    "alias": "电"
+    "alias": "电",
+    "maskName": "dianli"
   },
   {
     "code": "sh601211",
-    "alias": "泰"
+    "alias": "泰",
+    "maskName": "gt"
   },
   {
     "code": "sh601138",
-    "alias": "联"
+    "alias": "联",
+    "maskName": "fulian"
   },
   {
     "code": "sh562500",
-    "alias": "器"
+    "alias": "器",
+    "maskName": "jqr"
   }
 ]
