feat(plugin): 添加 B2M 插件图标
- 新增 b2m.svg 图标文件，用于 B2M 插件的视觉识别
- 在 plugin.xml 中添加图标路径，提升工具窗口的用户体验

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -16,6 +16,6 @@
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="cn.oopcoder.b2m.factory.B2mToolWindowFactory" id="b2m" anchor="right"/>
+        <toolWindow factoryClass="cn.oopcoder.b2m.factory.B2mToolWindowFactory" id="b2m" anchor="right" icon="/icons/b2m.svg"/>
     </extensions>
 </idea-plugin>
