feat(stock): 表格增加股票昨日收盘价、振幅和价格差字段
- 在 StockDataBean 中添加开盘价、昨收价、价格差和振幅等字段
- 实现价格差和振幅的计算逻辑
- 更新表格模型以显示新字段
- 调整列顺序和宽度

--- a/src/main/resources/config/DefaultStockConfig.json
+++ b/src/main/resources/config/DefaultStockConfig.json
@@ -45,5 +45,15 @@
     "code": "sh562500",
     "alias": "器",
     "maskName": "jqr"
+  },
+  {
+    "code": "usBABA",
+    "alias": "阿",
+    "maskName": "ali"
+  },
+  {
+    "code": "hk01810",
+    "alias": "米",
+    "maskName": "xm"
   }
 ]
